--- a/src/ui/all-cristals.fxml
+++ b/src/ui/all-cristals.fxml
@@ -11,12 +11,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField fx:id="TXT_CRISTAL_NAME" focusTraversable="false" layoutX="14.0" layoutY="14.0" prefHeight="37.0" prefWidth="569.0" promptText="Digita el nombre de la piedra que buscas">
+      <TextField fx:id="TXT_CRISTAL_NAME" focusTraversable="false" layoutX="16.0" layoutY="48.0" prefHeight="37.0" prefWidth="569.0" promptText="Digita el nombre de la piedra que buscas">
          <font>
             <Font name="Arial" size="20.0" />
          </font>
       </TextField>
-      <ImageView fx:id="BTTN_SEARCH" fitHeight="37.0" fitWidth="66.0" layoutX="546.0" layoutY="14.0" onMouseClicked="#search" onMouseMoved="#showSearchTooltip" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="BTTN_SEARCH" fitHeight="37.0" fitWidth="66.0" layoutX="548.0" layoutY="48.0" onMouseClicked="#search" onMouseMoved="#showSearchTooltip" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../icons/Search.png" />
          </image>
@@ -27,10 +27,18 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </ImageView>
-      <ScrollPane fx:id="SCRLLPANE" layoutY="78.0" prefHeight="322.0" prefWidth="600.0" style="-fx-background-color: white;">
+      <ScrollPane fx:id="SCRLLPANE" layoutY="97.0" prefHeight="303.0" prefWidth="600.0" style="-fx-background-color: white;">
          <content>
-            <Pane fx:id="PANE_CRISTALS" prefHeight="322.0" prefWidth="600.0" style="-fx-background-color: white;" />
+            <Pane fx:id="PANE_CRISTALS" prefHeight="302.0" prefWidth="600.0" style="-fx-background-color: white;" />
          </content>
       </ScrollPane>
+      <ImageView fx:id="BTTN_BACK" accessibleRole="BUTTON" fitHeight="56.0" fitWidth="48.0" onMouseClicked="#back" onMouseMoved="#showBackTooltip" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../icesis-cinema/icons/back%20icon.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
    </children>
 </Pane>
